status commit: styling overhaul
Changing to use LESScss and be pretty.

Per discussion with jrburke, losing iscroll.js in favor of using webkit's
built-in scrolling magic.

--- a/clients/deps/cardsHeader.html
+++ b/clients/deps/cardsHeader.html
@@ -1,8 +1,8 @@
-<div id="header" class="hbox">
-    <button id="back">Back</button>
+<div class="THEheader hbox">
+    <button class="THEback">Back</button>
     <div class="boxFlex">
-        <h1 id="headerText" class="overflow">Deuxdrop</h1>
+        <h1 class="THEheaderText overflow">Deuxdrop</h1>
     </div>
     <button class="next invisible">Info</button>
 </div>
-<a id="notify" data-nonav="nonav">!</a>
+<a class="THEnotify" data-nonav="nonav">!</a>
