--- a/clients/mobileui/index.html
+++ b/clients/mobileui/index.html
@@ -375,7 +375,7 @@
       </a>
 
       <span data-classimpl="newbubGroupMsg-message"
-            class="newbubGroupMsg-message newbubGroupMsg newbubMsg">
+            class=".hpn-groupMsg">
         <div>
           <img class="miniPeepInfoPic" data-bind="author.pic" data-attr="src"
                data-missing="OMIT" src="i/face2.png" />
@@ -387,7 +387,7 @@
       </span>
 
       <span data-classimpl="newbubGroupMsg-join"
-            class="newbubGroupMsg-join newbubGroupMsg newbubMsg">
+            class=".hpn-groupJoin">
         <div>
           <img class="miniPeepInfoPic" data-bind="inviter.pic" data-attr="src"
                data-missing="OMIT" src="i/face2.png" />
